--- a/src/app/coin/coin.component.css
+++ b/src/app/coin/coin.component.css
@@ -60,13 +60,34 @@
   color: var(--color-text-primary);
 }
 
-.coin-item {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
+table th {
+  background-color: var(--color-additional-highlight);
+  color: var(--color-text-primary);
+  padding: 12px 15px;
+  text-align: left;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+tbody td {
+  padding: 12px 15px;
+  border-bottom: 1px solid var(--color-additional-border);
+}
+
+tbody tr {
+  transition: background-color 0.3s ease;
+}
+
+tbody tr:hover {
+  background-color: var(--color-text-disabled);
+}
 .coin-item .remove-btn {
   background: var(--color-status-success);
   color: var(--color-primary-light);
